--- a/Extra java/oefening 1/index.html
+++ b/Extra java/oefening 1/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Week 5 - oefening 2</title>
+    <title>Week 2 - oefening 1</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div id="books"></div>
+    <div id="welkom"></div>
     <script src="script/custom.js"></script>
 </body>
 </html>
